--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lucide-react": "^0.427.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.4",
